examples/bad/ERROR_UNEXPECTED_PATTERN_FOR_TYPE/unexpected_variant_pattern.st
language core;

extend with #sum-types, #unit-type, #variants;

fn main(input : Bool) -> Nat {
  return match input {
     <| failure = f |>  => n
  }
}

//ERROR_UNEXPECTED_PATTERN_FOR_TYPE
